# Aura

./: LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  app.manifest  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cpu.rs  gpu.rs  memory.rs  mod.rs  network.rs  optimization_commands.rs  optimizations.rs  process.rs  processes.rs  resilient_monitor.rs  storage.rs  system.rs
src-tauri/src/models/: gpu_info.rs  mod.rs  optimization.rs  process_info.rs  system_stats.rs
src-tauri/src/services/: gpu_service.rs  mod.rs  optimization_service.rs  process_control.rs  process_service.rs
src-tauri/src/services/process_info/: children_processes.rs  cpu.rs  disk_io.rs  env_vars.rs  gpu.rs  gpu_new.rs  memory.rs  mod.rs  name.rs  parent_pid.rs  session_id.rs  status.rs  user.rs
src-tauri/src/shared/: system.rs
src-tauri/src/ui/: window.rs
src-tauri/src/utils/: bytes.rs  loaded_module.rs  mod.rs  system.rs  time.rs
src/components/: BaseCard.tsx  CpuUsageCard.tsx  DraggableCard.tsx  GpuCard.tsx  MasonryLayout.tsx  MemoryCard.tsx  ModalProcessInfo.tsx  ModernPagination.tsx  ModernPlayPause.tsx  MonitorHealthCard.tsx  NetworkCard.tsx  Optimizations.tsx  ProcessControlBar.tsx  ProcessControls.tsx  ProcessTable.tsx  SettingsCard.tsx  StatsCard.tsx  StorageCard.tsx
src/data/: GpuStats.ts  OptimizationTypes.ts  SystemStats.ts
